# numgen

./: 1.js  CNAME  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
js/: index.js
src/: lib.rs
static/: styles.css
