# You must change these to your own details.
[package]
name = "numgen"
description = "A toy number generator using Rust and WASM"
version = "0.1.0"
authors = ["Sander van Harmelen <sander@vanharmelen.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_pcg = "0.3"
wasm-bindgen = "0.2.45"

# These crates are used for running unit tests.
[dev-dependencies]
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"
wasm-bindgen-test = "0.2.45"
